assets/App-1.1.0.css
/* ... */
/**
 * Typography
 */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: local('Roboto Regular'), local('Roboto-Regular'), url(fonts/Roboto-Regular.woff) format('woff');
}
code,
pre,
.pre {
  padding: 5px;
  margin: 10px 0;
  background-color: #EFEFEF;
  border: 1px solid #DADADA;
  border-radius: 3px;
}
code {
  padding: 0 3px;
}
pre {
  margin: 10px 0;
  padding: 5px;
}
.page-header {
  margin-top: 60px;
}
.page-header:first-child {
  margin-top: 20px;
}
h2 {
  margin: 20px 0;
  color: #666;
}
/**
 * Navigation
 */
.navbar {
  margin-top: 20px;
}
.navbar small {
  font-size: 60%;
}
.topbar {
  position: fixed;
  padding-right: 10px;
  top: 0px;
  height: 70px;
  width: 100%;
  background: #000;
  z-index: 998;
}
/**
 * Main
 */
.main {
  text-align: center;
  margin-top: 50px;
  min-height: 400px;
}
/**
 * Footer
 */
.footer {
  margin-top: 10px;
  text-align: center;
}
.footer .footer-inner {
  padding: 40px 0;
}
.footer .social {
  float: right;
  margin: 0;
  list-style: none;
}
.footer .social li {
  float: left;
  margin-left: 20px;
}
.footer .social li a,
.footer .social li a:visited {
  color: #999999;
  text-decoration: none;
  font-size: 40px;
  -webkit-transition: 250ms ease-in-out;
  transition: 250ms ease-in-out;
}
.footer .social li a:hover,
.footer .social li a:visited:hover {
  color: #555555;
}
/**
 * Navbar
 */
.icon-bars-button {
  position: fixed;
  display: inline-block;
  vertical-align: middle;
  height: 40px;
  padding-top: 9px;
  left: 10px;
  top: 15px;
  background-color: #FF3C1F;
}
.icon-bars-button-left {
  -moz-transition: left .3s;
  -webkit-transition: left .3s;
  -o-transition: left .3s;
  transition: left .3s;
  left: 10px;
}
.icon-bars-button-right {
  -moz-transition: left .3s;
  -webkit-transition: left .3s;
  -o-transition: left .3s;
  transition: left .3s;
  left: 160px;
}
.icon-bar {
  margin-bottom: 4px;
  display: block;
  width: 22px;
  height: 4px;
  background-color: #fff;
  border-radius: 2px;
}
.sidebar {
  -moz-transition: left .3s;
  -webkit-transition: left .3s;
  -o-transition: left .3s;
  transition: left .3s;
  width: 150px;
  height: 100%;
  background-color: #34495e;
  position: absolute;
  top: 0px;
  padding-top: 10px;
  left: -150px;
  text-align: center;
  z-index: 999;
}
.sidebar .menu-item {
  width: 150px;
  min-height: 86px;
}
.sidebar div {
  color: #fff;
  text-align: center;
}
.sidebar a,
.sidebar a:hover,
.sidebar a:visited {
  color: #fff;
  text-decoration: none;
}
.sidebar a:hover i {
  color: #FF5140;
}
.sidebar p {
  color: #fff;
  font-size: 1.2em;
  font-weight: bold;
}
.slide-out {
  -moz-transition: left .3s;
  -webkit-transition: left .3s;
  -o-transition: left .3s;
  transition: left .3s;
  left: 0px;
}
/**
 * Profile
 */
.avatar-frame {
  border: 0px;
  margin-bottom: 10px;
}
.avatar-frame,
.avatar-frame img {
  width: 100px;
  height: 100px;
  -webkit-border-radius: 70px;
  /* Saf3+, Chrome */
  border-radius: 70px;
  /* Opera 10.5, IE 9 */
  /*-moz-border-radius: 70px;  Disabled for FF1+ */
}
/**
 * Other
 */
.badge {
  position: relative;
  right: -10px;
  top: 10px;
  background-color: #FF3C1F;
  z-index: 1000;
}
.avatar-frame .badge {
  right: -100px;
  top: -30px;
}
.orange {
  color: #FF3C1F;
}
.white {
  color: #fff;
}
.light-grey {
  color: #ddd;
}
.dark-grey {
  color: #4C5053;
}
.pull-left {
  float: left;
}
.pull-right {
  float: right;
}
.pull-top {
  top: 0px;
}
.center {
  text-align: center;
}
.left {
  text-align: left;
}
.right {
  text-align: right;
}
.vmiddle {
  vertical-align: middle;
}
/**
 * Buttons
 */
.btn-primary {
  background-color: #FF3C1F;
  border-color: #FF5140;
}
.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active {
  background-color: #EA250B;
  border-color: #FF3C1F;
}
.open .dropdown-toggle.btn-primary {
  background-color: #EA250B;
  border-color: #FF3C1F;
}
.dropdown-menu-right {
  right: 0 !important;
}
/**
 * Overrides
 */
h1 {
  margin-top: 15px!important;
}
.container {
  padding-left: 0px !important;
}
.modal-dialog {
  margin-top: 60px !important;
}
.modal-body {
  font-size: 1.1em !important;
  word-break: break-all;
  word-wrap: break-word;
}
.half-width {
  width: 50%;
}
.col-md-12 {
  padding-left: 10px;
  padding-right: 10px;
}
.clear-70 {
  margin-top: 70px;
}
[ng\:cloak],
[ng-cloak],
[data-ng-cloak],
[x-ng-cloak],
.ng-cloak,
.x-ng-cloak {
  display: none !important;
}
/**
 * Now that all app-wide styles have been applied, we can load the styles for
 * all the submodules and components we are using.
 *
 * TODO: In a later version of this boilerplate, I'd like to automate this.
 */

/**
 * These are the variables used throughout the application. This is where 
 * overwrites that are not specific to components should be maintained.
 */
/**
 * Typography-related.
 */

